--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,49 +1,59 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-
 <div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@admin.com</code> / <code>admin</code></p>
+
+    <div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+
+        <div class="row">
+            <div class="iconhold">
+              <img src="assets/images/rocket-launch.png" alt="Rocket Ship" />
+            </div>
+        </div>
+
+        <div class="panel panel-default" >
+            <div class="panel-heading">
+                <div class="panel-title text-center">Order Portal Login</div>
+            </div>
+
+            <div class="panel-body" >
+
+                <form name="form" id="form" class="form-horizontal" enctype="multipart/form-data" method="POST" ng-submit="login(form)">
+
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                        <input id="user" type="text" class="form-control" name="user" value="" ng-model="user.email" placeholder="Email" required>
+                    </div>
+
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input id="password" type="password" class="form-control" name="password" placeholder="Password" ng-model="user.password" required>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-sm-12 controls">
+                            <button type="submit" href="#" class="btn btn-primary pull-right"><i class="glyphicon glyphicon-log-in"></i> Log in</button>
+                            <p>Don't have an account? <a href="/signup">Signup.</a></p>
+                              <p class="label label-danger" ng-show="form.email.$error.required && form.password.$error.required && submitted">
+                                 Please enter your email and password.
+                              </p>
+                              <p class="label label-danger" ng-show="form.email.$error.email && submitted">
+                                 Please enter a valid email.
+                              </p>
+                              <p class="label label-danger">{{ errors.other }}</p>
+                        </div>
+                    </div>
+
+                </form>
+
+            </div>
+        </div>
     </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="login(form)" novalidate>
-
-        <div class="form-group">
-          <label>Email</label>
-
-          <input type="email" name="email" class="form-control" ng-model="user.email" required>
-        </div>
-
-        <div class="form-group">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="user.password" required>
-        </div>
-
-        <div class="form-group has-error">
-          <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">
-             Please enter your email and password.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.email && submitted">
-             Please enter a valid email.
-          </p>
-
-          <p class="help-block">{{ errors.other }}</p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Login
-          </button>
-          <a class="btn btn-default btn-lg btn-register" href="/signup">
-            Register
-          </a>
-        </div>
-
-      </form>
-    </div>
-  </div>
-  <hr>
 </div>
+
+<div class="row text-center">
+  <div class="col-sm-12">
+    <!-- <p>Default account is <code>test@test.com</code> / <code>test</code></p> -->
+    <p>Login to the admin account to modify prodcuts (email: <code>admin@admin.com</code>, pass: <code>admin</code>)</p>
+    <p>Simulate a user account by  <a href="/signup">signing up</a>, as a normal user would.</p>
+  </div>
+</div>
+
+<div ng-include="'components/particles/particles.html'"></div>
