--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,4 +1,4 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<!-- <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container">
   <div class="row">
@@ -58,13 +58,77 @@
           <button class="btn btn-inverse btn-lg btn-login" type="submit">
             Sign up
           </button>
-          <a class="btn btn-default btn-lg btn-register" href="/login">
-            Login
-          </a>
+          <p>Already have an account? <a href="/login">Login.</a></p>
         </div>
 
       </form>
     </div>
   </div>
   <hr>
+</div> -->
+
+
+
+<div class="container">
+
+    <div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+
+        <div class="row">
+            <div class="iconhold">
+              <img src="assets/images/rocket-launch.png" alt="Rocket Ship" />
+            </div>
+        </div>
+
+        <div class="panel panel-default" >
+            <div class="panel-heading">
+                <div class="panel-title text-center">Sign up to order portal</div>
+            </div>
+
+            <div class="panel-body" >
+
+                <form name="form" id="form" class="form-horizontal" enctype="multipart/form-data" method="POST" ng-submit="register(form)">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input id="name" type="text" class="form-control" name="name" value="" ng-model="user.name" placeholder="Name" required>
+                    </div>
+
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                        <input id="user" type="text" class="form-control" name="user" value="" ng-model="user.email" placeholder="Email" required mongoose-error>
+                    </div>
+
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input id="password" type="password" class="form-control" name="password" placeholder="Password" ng-model="user.password" ng-minlength="3" required mongoose-error>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-sm-12 controls">
+                            <button type="submit" href="#" class="btn btn-primary pull-right"><i class="glyphicon glyphicon-pencil"></i> Sign up</button>
+                            <p>Already have an account? <a href="/login">Login.</a></p>
+                            <p class="label label-danger" ng-show="form.name.$error.required && submitted">
+                              A name is required
+                            </p>
+                            <p class="label label-danger" ng-show="form.email.$error.email && submitted">
+                              Doesn't look like a valid email.
+                            </p>
+                            <p class="label label-danger" ng-show="form.email.$error.required && submitted">
+                              What's your email address?
+                            </p>
+                            <p class="label label-danger" ng-show="(form.password.$error.minlength || form.password.$error.required) && submitted">
+                              Password must be at least 3 characters.
+                            </p>
+                            <p class="label label-danger" ng-show="form.password.$error.mongoose">
+                              {{ errors.password }}
+                            </p>
+                        </div>
+                    </div>
+
+                </form>
+
+            </div>
+        </div>
+    </div>
 </div>
+
+<div ng-include="'components/particles/particles.html'"></div>
