--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,27 +2,53 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <h1>It's time to order.</h1>
+    <p class="lead">Use the interface below to place your order.</p>
   </div>
 </header>
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
+
+    <!-- Insert data table in here -->
+    <form name="form" ng-submit="order(form)">
+      <div ng-repeat="category in categories">
+        <br>
+        <h4>{{category}}</h4>
+        <hr>
+        <div class="form-group" ng-repeat="product in products | filter:{category : category}">
+          <div class="row">
+            <div class="col-xs-3">
+              <p>{{product.name}}</p>
+            </div>
+            <div class="col-xs-5">
+              <p>{{product.info}}</p>
+            </div>
+            <div class="col-xs-3 text-right">
+              <p>{{product.price | currency}}</p>
+            </div>
+            <div class="col-xs-1">
+              <input name="{{product._id}}" type="number" class="form-control" ng-model="product.quantity" min="0" max="1000" />
+            </div>
+          </div>
+          <hr>
+        </div>
+      </div>
+      <div class="btn-group" role="group">
+        <button type="submit" type="button" class="btn btn-success">Order now</button>
+      </div>
+      <div class="alert alert-success" ng-show="sent && submitted">
+        <strong>Success!</strong> Your order has been placed and an email has been sent to you confirming your order.
+      </div>
+      <div class="alert alert-danger" ng-show="error && submitted">
+        <strong>Error!</strong> Something has gone wrong.
+      </div>
+      <div class="alert alert-danger" ng-show="nothingEntered && submitted">
+        <strong>Error!</strong> You cannot order nothing.
+      </div>
+    </form>
     </div>
   </div>
 </div>
 
-<footer class="footer">
-  <div class="container">
-      <p>Angular Fullstack v2.1.1 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
-  </div>
-</footer>
+<div ng-include="'components/footer/footer.html'"></div>
