Ordering function complete. Emails implemented.

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="btn-group" role="group">
-        <button type="submit" type="button" class="btn btn-success">Order now</button>
+        <button type="submit" type="button" class="btn btn-success btn-margin-custom">Order now</button>
       </div>
       <div class="alert alert-success" ng-show="sent && submitted">
         <strong>Success!</strong> Your order has been placed and an email has been sent to you confirming your order.
